# marrow

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  icon.icns  test_math.ipynb
.claude/: CLAUDE.md
icon/: Untitled.afdesign  icon.afdesign  icon.icns  marrow2.afdesign  marrow5.afdesign
sandbox/: test.ipynb  test.md  test_errors_1.ipynb  test_large_output.ipynb  test_long.md  test_svg.ipynb
sandbox/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: main.rs  script.js  style.css  template.html
