[package]
name = "marrow"
version = "0.1.8"
edition = "2021"
description = "A fast markdown viewer with GitHub and terminal rendering modes"
authors = ["bfmaier"]

[dependencies]
wry = "0.47"
tao = "0.30"
pulldown-cmark = { version = "0.12", features = ["simd"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
base64 = "0.22"
urlencoding = "2"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

[package.metadata.bundle]
name = "Marrow"
identifier = "com.marrow.app"
icon = ["icon/icon.icns"]
category = "public.app-category.developer-tools"

[profile.release]
lto = true
codegen-units = 1
strip = true
